add_open_in_colab_button

--- a/notebook/template_open_in_colab.ipynb
+++ b/notebook/template_open_in_colab.ipynb
@@ -6,7 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open in colab button\n"
+    "# open in colab button\n",
+    "COLABROOT = \"https://colab.research.google.com/github/Nozium/route-optimization/blob/master/notebook\"\n",
+    "THIS_FILE = \"template_open_in_colab.ipynb\"\n",
+    "COLABURL = f\"{COLABROOT}/{THIS_FILE}\"\n",
+    "print(COLABURL)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "replace bottun url to your notebook url  \n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Nozium/route-optimization/blob/master/notebook/template_open_in_colab.ipynb)"
    ]
   },
   {
